--- a/views/page/admin/pendaftaran-kurir.ejs
+++ b/views/page/admin/pendaftaran-kurir.ejs
@@ -21,21 +21,23 @@
       </div>
     </div>
 
-    <form class="form-pendaftaran" action="/pendaftaran" method="get">
+    <form class="form-pendaftaran" action="/tambahkurir" method="post">
       <p>Menambahkan akun Kurir</p>
-      <input type="text" placeholder="Nama" value="" />
-      <input type="text" placeholder="No. Handphone" value="" />
-      <input type="text" placeholder="Email" value="" />
-      <input type="text" placeholder="Password" value="" />
+      <input type="text" id="nama" name="nama" placeholder="Nama" value=""/>
+      <input type="text" id="handphone" name="handphone" placeholder="No. Handphone" value="" />
+      <input type="text" id="email" name="email" placeholder="Email" value="" />
+      <input type="text" id="password" name="password" placeholder="Password" value="" />
 
       <select id="kecamatan" name="kecamatan">
         <option value="">-- Pilih Kecamatan --</option>
+        <option>Medan Tuntungan</option>
       </select>
       <select id="kelurahan" name="kelurahan">
         <option value="">-- Pilih Kelurahan --</option>
+        <option>Simpang Selayang</option>
       </select>
 
-      <button class="green-btn">Tambah</button>
+      <button type="submit" class="green-btn">Tambah</button>
     </form>
   </body>
 </html>
