--- a/views/page/admin/pendaftaran-agen-karyawan.ejs
+++ b/views/page/admin/pendaftaran-agen-karyawan.ejs
@@ -22,11 +22,12 @@
       </div>
     </div>
 
-    <form class="form-pendaftaran" action="/pendaftaran" method="get">
+    <form class="form-pendaftaran" action="/pendaftaran" method="post">
       <p>Menambahkan akun agen & karyawan</p>
 
       <input type="text" placeholder="Email" value="" />
       <input type="text" placeholder="Password" value="" />
+      <input type="text" placeholder="Re-password" value="" />
       <select id="opsi-status">
         <option value="">-- Opsi Status --</option>
         <option value="agen">Agen</option>
