--- a/views/page/admin/pendaftaran-kurir.ejs
+++ b/views/page/admin/pendaftaran-kurir.ejs
@@ -27,7 +27,7 @@
       <input type="text" placeholder="No. Handphone" value="" />
       <input type="text" placeholder="Email" value="" />
       <input type="text" placeholder="Password" value="" />
-
+      <input type="text" placeholder="Re-password" value="" />
       <select id="kecamatan" name="kecamatan">
         <option value="">-- Pilih Kecamatan --</option>
       </select>
