--- a/views/page/admin/pendaftaran-agen-karyawan.ejs
+++ b/views/page/admin/pendaftaran-agen-karyawan.ejs
@@ -6,7 +6,8 @@
     <title>Pendaftaran Agen & Karyawan</title>
     <link rel="stylesheet" href="css/pendaftaran-styles.css" />
     <link rel="stylesheet" href="css/custom-style.css" />
-
+    <script src="script/admin-script.js"></script>
+    <script src="script/fetch.js"></script>
     <link
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css"
@@ -15,7 +16,7 @@
   <body>
     <div class="header">
       <div class="back-btn">
-        <a href="/pendaftaran">
+        <a onclick="goBack()">
           <i class="fas fa-arrow-left fa-lg"></i
           ><span class="btn-text">Kembali</span>
         </a>
