--- a/views/page/admin/pendaftaran.ejs
+++ b/views/page/admin/pendaftaran.ejs
@@ -7,6 +7,8 @@
     <link rel="icon" href="img/logo-icon.png" type="image/x-icon" />
     <link rel="stylesheet" href="css/pendaftaran-styles.css" />
     <link rel="stylesheet" href="css/custom-style.css" />
+    <script src="script/admin-script.js"></script>
+    <script src="script/fetch.js"></script>
     <link
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css"
@@ -16,7 +18,7 @@
   <body>
     <div class="header">
       <div class="back-btn">
-        <a href="/admin">
+        <a onclick="goBack()">
           <i class="fas fa-arrow-left fa-lg"></i
           ><span class="btn-text">Kembali</span>
         </a>
