--- a/views/page/admin/penentuan-kurir.ejs
+++ b/views/page/admin/penentuan-kurir.ejs
@@ -15,8 +15,9 @@
 
 <body>
     <div class="header">
-        <div class="back-btn">
-            <a href="/admin">
+        <div class="back-btn" >
+            <a
+            onclick="goBack()">
                 <i class="fas fa-arrow-left fa-lg"></i><span class="btn-text">Kembali</span>
             </a>
         </div>
