--- a/views/page/admin/list-akun.ejs
+++ b/views/page/admin/list-akun.ejs
@@ -15,7 +15,8 @@
 <body>
     <div class="header">
         <div class="back-btn">
-            <a href="/pendaftaran">
+            <a
+            onclick="goBack()">
                 <i class="fas fa-arrow-left fa-lg"></i><span class="btn-text">Kembali</span>
             </a>
         </div>
