--- a/views/page/admin/riwayat.ejs
+++ b/views/page/admin/riwayat.ejs
@@ -14,7 +14,8 @@
 <body>
     <div class="header">
         <div class="back-btn">
-            <a href="/admin">
+            <a
+            onclick="goBack()">
                 <i class="fas fa-arrow-left fa-lg"></i><span class="btn-text">Kembali</span>
             </a>
         </div>
