--- a/views/page/halaman-agen.ejs
+++ b/views/page/halaman-agen.ejs
@@ -155,7 +155,7 @@
     let marker;
 
     function initMap() {
-      map = L.map("map").setView([3.585242, 98.675598], 13);
+      map = L.map("map").setView([3.5951646965262394, 98.6715265542528], 16);
       L.tileLayer("https://{s}.tile.openstreetmap.org/{z}/{x}/{y}.png", {
         attribution: "© OpenStreetMap contributors",
       }).addTo(map);
