--- a/views/page/admin/pendaftaran-agen-karyawan.ejs
+++ b/views/page/admin/pendaftaran-agen-karyawan.ejs
@@ -22,13 +22,11 @@
         </a>
       </div>
     </div>
-
-    <form class="form-pendaftaran" action="/pendaftaran" method="post">
+    <form class="form-pendaftaran" action="/tambahagen" method="post">
       <p>Menambahkan akun agen & karyawan</p>
-
-      <input type="text" placeholder="Email" value="" />
-      <input type="text" placeholder="Password" value="" />
-      <select id="opsi-status">
+      <input type="text" id="email" name="email" placeholder="Email" value="" />
+      <input type="text" id="password" name="password" placeholder="Password" value="" />
+      <select id="status" name="status">
         <option value="">-- Opsi Status --</option>
         <option>agen</option>
         <option>karyawan</option>
