--- a/views/coba.ejs
+++ b/views/coba.ejs
@@ -16,6 +16,7 @@
     <input type="text" id="address" placeholder="Enter address" />
     <button type="button" id="show-on-map">Show on Map</button>
     <textarea id="clicked-address" style="border: 1px solid black"></textarea>
+    <textarea id="coordinates" style="border: 1px solid black"></textarea>
     <script>
       let map;
       let marker;
@@ -41,12 +42,17 @@
               document.getElementById(
                 "clicked-address"
               ).innerText = `Clicked address: ${address}`;
+              showCoordinates(e.latlng.lat, e.latlng.lng);
             })
             .catch((error) => {
               console.error("Error fetching data:", error);
               alert("Error fetching data. Please try again.");
             });
         });
+      }
+
+      function showCoordinates(lat, lon) {
+        document.getElementById("coordinates").innerText = `Coordinates: ${lat}, ${lon}`;
       }
 
       document.getElementById("show-on-map").addEventListener("click", () => {
@@ -66,6 +72,7 @@
                 map.removeLayer(marker);
               }
               marker = L.marker(latLng).addTo(map);
+              showCoordinates(lat, lon);
             })
             .catch((error) => {
               console.error("Error fetching data:", error);
