--- a/views/page/halaman-agen.ejs
+++ b/views/page/halaman-agen.ejs
@@ -130,14 +130,12 @@
         <p>Memilih zona pengiriman</p>
         <div class="opsi">
           <select id="kecamatan" name="kecamatan">
-            <option value="">-- Pilih Kecamatan --</option>
-            <option>Medan Tuntungan</option>
           </select>
           <select id="kelurahan" name="kelurahan">
-            <option value="">-- Pilih Kelurahan --</option>
-            <option>Simpang Selayang</option>
           </select>
         </div>
+        <input type="hidden" id="latitude" name="latitude" />
+        <input type="hidden" id="longitude" name="longitude" />
         <button type="submit" class="button">Konfirmasi</button>
       </div>
     </form>
@@ -155,81 +153,87 @@
     let marker;
 
     function initMap() {
-      map = L.map("map").setView([3.5951646965262394, 98.6715265542528], 16);
-      L.tileLayer("https://{s}.tile.openstreetmap.org/{z}/{x}/{y}.png", {
-        attribution: "© OpenStreetMap contributors",
-      }).addTo(map);
+        map = L.map("map").setView([3.5951646965262394, 98.6715265542528], 16);
+        L.tileLayer("https://{s}.tile.openstreetmap.org/{z}/{x}/{y}.png", {
+          attribution: "© OpenStreetMap contributors",
+        }).addTo(map);
 
-      map.on("click", function (e) {
-        if (marker) {
-          map.removeLayer(marker);
-        }
-        marker = L.marker(e.latlng).addTo(map);
+        map.on("click", function (e) {
+          if (marker) {
+            map.removeLayer(marker);
+          }
+          marker = L.marker(e.latlng).addTo(map);
 
-        axios
-          .get(
-            `https://nominatim.openstreetmap.org/reverse?format=json&lat=${e.latlng.lat}&lon=${e.latlng.lng}`
-          )
-          .then((response) => {
-            const address = response.data.display_name;
-            document.getElementById("alamat_tujuan").value = address;
-          })
-          .catch((error) => {
-            console.error("Error fetching data:", error);
-            alert("Error fetching data. Please try again.");
-          });
-      });
-    }
+          axios
+            .get(
+              `https://nominatim.openstreetmap.org/reverse?format=json&lat=${e.latlng.lat}&lon=${e.latlng.lng}`
+            )
+            .then((response) => {
+              const address = response.data.display_name;
+              document.getElementById("alamat_tujuan").value = address;
+              document.getElementById("latitude").value = e.latlng.lat;
+              document.getElementById("longitude").value = e.latlng.lng;
+            })
+            .catch((error) => {
+              console.error("Error fetching data:", error);
+              alert("Error fetching data. Please try again.");
+            });
+        });
+      }
 
-    document.getElementById("confirm-address").addEventListener("click", () => {
-      const address = document.getElementById("alamat_tujuan").value;
-      if (address) {
-        axios
-          .get(
-            `https://nominatim.openstreetmap.org/search?format=json&q=${encodeURIComponent(
-              address
-            )}`
-          )
-          .then((response) => {
-            if (response.data.length > 0) {
-              const { lat, lon } = response.data[0];
-              const latLng = [parseFloat(lat), parseFloat(lon)];
-              map.setView(latLng, 13);
-              if (marker) {
-                map.removeLayer(marker);
+      document.getElementById("confirm-address").addEventListener("click", () => {
+        const address = document.getElementById("alamat_tujuan").value;
+        if (address) {
+          axios
+            .get(
+              `https://nominatim.openstreetmap.org/search?format=json&q=${encodeURIComponent(
+                address
+              )}`
+            )
+            .then((response) => {
+              if (response.data.length > 0) {
+                const { lat, lon } = response.data[0];
+                const latLng = [parseFloat(lat), parseFloat(lon)];
+                map.setView(latLng, 13);
+                if (marker) {
+                  map.removeLayer(marker);
+                }
+                marker = L.marker(latLng).addTo(map);
+                document.getElementById("latitude").value = lat;
+                document.getElementById("longitude").value = lon;
+              } else {
+                alert("Alamat tidak ditemukan. Coba lagi.");
               }
-              marker = L.marker(latLng).addTo(map);
-            } else {
-              alert("Alamat tidak ditemukan. Coba lagi.");
-            }
-          })
-          .catch((error) => {
-            console.error("Error fetching data:", error);
-            alert("Error fetching data. Please try again.");
-          });
+            })
+            .catch((error) => {
+              console.error("Error fetching data:", error);
+              alert("Error fetching data. Please try again.");
+            });
 
+          const modal = document.getElementById("addressModal");
+          modal.style.display = "block";
+          setTimeout(() => {
+            map.invalidateSize();
+          }, 300);
+        } else {
+          alert("Masukkan alamat terlebih dahulu.");
+        }
+      });
+
+      document.getElementsByClassName("close")[0].onclick = function () {
+        document.getElementById("addressModal").style.display = "none";
+      };
+
+      window.onclick = function (event) {
         const modal = document.getElementById("addressModal");
-        modal.style.display = "block";
-        setTimeout(() => {
-          map.invalidateSize();
-        }, 300);
-      } else {
-        alert("Masukkan alamat terlebih dahulu.");
-      }
-    });
+        if (event.target == modal) {
+          modal.style.display = "none";
+        }
+      };
 
-    document.getElementsByClassName("close")[0].onclick = function () {
-      document.getElementById("addressModal").style.display = "none";
-    };
+      window.addEventListener("load", initMap);
+      
 
-    window.onclick = function (event) {
-      const modal = document.getElementById("addressModal");
-      if (event.target == modal) {
-        modal.style.display = "none";
-      }
-    };
-
-    window.addEventListener("load", initMap);
   </script>
 </body>
 
