--- a/views/page/admin/pendaftaran-agen-karyawan.ejs
+++ b/views/page/admin/pendaftaran-agen-karyawan.ejs
@@ -16,7 +16,7 @@
   <body>
     <div class="header">
       <div class="back-btn">
-        <a onclick="goBack()">
+        <a href="/pendaftaran">
           <i class="fas fa-arrow-left fa-lg"></i
           ><span class="btn-text">Kembali</span>
         </a>
