--- a/views/page/admin/pendaftaran.ejs
+++ b/views/page/admin/pendaftaran.ejs
@@ -18,7 +18,7 @@
   <body>
     <div class="header">
       <div class="back-btn">
-        <a onclick="goBack()">
+        <a href="/admin">
           <i class="fas fa-arrow-left fa-lg"></i
           ><span class="btn-text">Kembali</span>
         </a>
