--- a/views/page/admin/pendaftaran-kurir.ejs
+++ b/views/page/admin/pendaftaran-kurir.ejs
@@ -7,7 +7,6 @@
     <link rel="stylesheet" href="css/pendaftaran-styles.css" />
     <link rel="stylesheet" href="css/custom-style.css" />
     <script src="script/admin-script.js"></script>
-    <script src="script/fetch.js"></script>
     <link
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css"
@@ -16,7 +15,7 @@
   <body>
     <div class="header">
       <div class="back-btn">
-        <a onclick="goBack()">
+        <a href="/pendaftaran">
           <i class="fas fa-arrow-left fa-lg"></i
           ><span class="btn-text">Kembali</span>
         </a>
@@ -31,15 +30,48 @@
       <input type="text" id="password" name="password" placeholder="Password" value="" />
 
       <select id="kecamatan" name="kecamatan">
-        <option value="">-- Pilih Kecamatan --</option>
-        <option>Medan Tuntungan</option>
       </select>
       <select id="kelurahan" name="kelurahan">
-        <option value="">-- Pilih Kelurahan --</option>
-        <option>Simpang Selayang</option>
       </select>
 
       <button type="submit" class="green-btn">Tambah</button>
     </form>
+
+    <script>
+  // Mendapatkan elemen select
+  const kecamatanSelect = document.getElementById('kecamatan');
+  const kelurahanSelect = document.getElementById('kelurahan');
+
+  // Memuat data dari file JSON
+  fetch('/data/lokasi.json')
+    .then(response => response.json())
+    .then(data => {
+      // Mengisi opsi kecamatan
+      for (let kecamatan in data) {
+        let option = document.createElement('option');
+        option.value = kecamatan;
+        option.textContent = kecamatan;
+        kecamatanSelect.appendChild(option);
+      }
+
+      // Event listener ketika kecamatan dipilih
+      kecamatanSelect.addEventListener('change', function () {
+        // Menghapus opsi kelurahan sebelumnya
+        kelurahanSelect.innerHTML = '<option value="">--Pilih Kelurahan--</option>';
+
+        // Mendapatkan kelurahan berdasarkan kecamatan yang dipilih
+        let kelurahans = data[this.value];
+        if (kelurahans) {
+          kelurahans.forEach(function (kelurahan) {
+            let option = document.createElement('option');
+            option.value = kelurahan;
+            option.textContent = kelurahan;
+            kelurahanSelect.appendChild(option);
+          });
+        }
+      });
+    })
+    .catch(error => console.error('Error fetching data:', error));
+    </script>
   </body>
 </html>
